Fixed image tool z-index level

--- a/resources/assets/scss/_editor.scss
+++ b/resources/assets/scss/_editor.scss
@@ -218,7 +218,7 @@
 	pointer-events: none;
 	width: 10rem;
 	height: 50px;
-	z-index: 9999;
+	z-index: 8888;
 	opacity: 0;
 	transition: opacity .2s ease;
 
